# KnittingProject

./: .gitignore  GEMINI.md  README.md  Robot_fabric_scanner.py  app.py  app_state.py  benchmark.py  coloring.py  config.json  config_schema.py  frame_functions.py  gui.py  guide.txt  guided_workflow_app.py  imgui_app.py  initial_params.json  knitting_core.py  knitting_loop.py  knitting_obj_forward.blend  knitting_obj_forward.blend1  knitting_project_draft3.blend  knitting_project_draft3.blend1  main.py  mesh_io.py  mujoco_fabric_scanner.py  new_main.py  obj_to_mesh.py  optimize_knitting.py  params.json  pick_colors.py  pick_colors_gui.py  pyproject.toml  render_images_gui.py  rendering.py  requirements-mujoco.txt  requirements.txt  run.py  run_gpu.sh  script1.py  spline.py  (+4 more)
.agents/: AGENTS.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/trame_ui_20260217/: metadata.json  plan.md  spec.md
conductor/tracks/refactor_unify_optimizer_20260217/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/trame_ui_20260217/: index.md  plan.md
docs/superpowers/plans/: 2026-07-06-knitting-core-tests.md  2026-07-07-limit-autosave-frequency.md  2026-07-07-periodic-splines.md  2026-07-07-yarn-simulation.md  2026-07-12-yarn-simulation-pipeline-refactoring.md
docs/superpowers/specs/: 2026-07-06-knitting-core-tests-design.md  2026-07-07-limit-autosave-frequency-design.md  2026-07-07-periodic-splines-design.md  (+3 more)
mobile/: index.html
tests/: test_autosave.py  test_knitting_core.py  test_knitting_core_sim.py
