[project]
name = "knittingproject"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "drjit>=1.3.1",
    "glfw>=2.10.0",
    "imgui-bundle>=1.92.801",
    "jax>=0.10.1",
    "mitsuba>=3.8.0",
    "moderngl>=5.12.0",
    "numpy>=2.4.6",
    "optax>=0.2.8",
    "pillow>=12.2.0",
    "pyopengl>=3.1.10",
    "scipy>=1.17.1",
    "ur-rtde>=1.6.0",
    "vedo>=2026.6.1",
    "vtk>=9.6.2",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]; sys_platform == 'linux'",
]
