[project]
name = "knittingproject"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "glfw>=2.10.0",
    "imgui-bundle>=1.92.801",
    "ipctk",
    "jax>=0.10.1",
    "moderngl>=5.12.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pyopengl>=3.1.10",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]; sys_platform == 'linux'",
]
